# linprog-modeler

./: Makefile  README.md  modeler.py  pyproject.toml
.github/workflows/: python-ci.yaml
lpmodeler/: model.py
test/: test_corner_usage.py  test_lp_var_types.py  test_maximize.py  test_model.py  test_sequential_solve.py
