[tool.poetry]
name = "lpmodeler"
version = "0.1.0"
description = "Simple wrapper around scipy.optimize.linprog for linear and mixed integer programming problems"
authors = ["hitonanode <32937551+hitonanode@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "lpmodeler" },
]

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.11.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
mypy = "^1.10.0"
pytest = "^8.1.1"

[tool.mypy]
python_version = "3.11"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
